// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Link Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <a
    className="sc-1j2yc6w-0 hMIrno"
    href="#"
    onClick={null}
    size="sm"
  >
    Im a link
  </a>
</div>
`;

exports[`Storyshots Atoms/Link Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <a
    className="sc-1j2yc6w-0 jnDPdw"
    href="#"
    onClick={null}
    size="xxs"
  >
    Im a link
  </a>
  <a
    className="sc-1j2yc6w-0 dTJjEA"
    href="#"
    onClick={null}
    size="xs"
  >
    Im a link
  </a>
  <a
    className="sc-1j2yc6w-0 hMIrno"
    href="#"
    onClick={null}
    size="sm"
  >
    Im a link
  </a>
  <a
    className="sc-1j2yc6w-0 eeFjTo"
    href="#"
    onClick={null}
    size="md"
  >
    Im a link
  </a>
  <a
    className="sc-1j2yc6w-0 ezvPis"
    href="#"
    onClick={null}
    size="lg"
  >
    Im a link
  </a>
  <a
    className="sc-1j2yc6w-0 jzGJvo"
    href="#"
    onClick={null}
    size="xl"
  >
    Im a link
  </a>
  <a
    className="sc-1j2yc6w-0 ehHSjo"
    href="#"
    onClick={null}
    size="xxl"
  >
    Im a link
  </a>
  <a
    className="sc-1j2yc6w-0 eQShpg"
    href="#"
    onClick={null}
    size="xxxl"
  >
    Im a link
  </a>
</div>
`;

exports[`Storyshots Atoms/Link Skeleton 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kjnynt-0 jfZhXD"
    data-testid="undefined_skeleton"
    id="undefined_skeleton"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <a
      className="sc-1j2yc6w-0 hMIrno"
      href="#"
      onClick={null}
      size="sm"
    >
      Im a link
    </a>
  </div>
</div>
`;
